--- a/M1/styles.css
+++ b/M1/styles.css
@@ -1,3 +1,109 @@
-.navigation-conteiner{
-    background-color: aqua;
+body {
+
+    margin: 0 auto;
+    padding: 0;
+}
+
+.navbar {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.logo-conteiner {
+
+}
+
+.logo{
+    width: 200px;
+}
+
+.subtitle {
+
+    border-top: 1px solid #feebaf;
+    background-color: #fdfbf1;
+    width: 100%;
+    text-align: center;
+    color: #107777;
+}
+.grassetto-subtitle {
+    font-weight: bold;
+}
+
+main {
+
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.main-conteiner {
+
+    width: 50%;
+}
+
+.main-conteiner h1 {
+
+    text-align: center;
+    color: #333333;
+    padding-left: 40px;
+    padding-right: 40px;
+    font-size: 43px;
+
+}
+
+.main-conteiner img {
+
+    height: 600px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+
+}
+
+.main-conteiner p {
+
+    font-size: 18px;
+}
+.main-conteiner figcaption {
+    text-align: center;
+    margin-top: 10px;
+    color: #9e9e9e;
+}
+
+.link-image {
+
+    margin-top: 23px;
+    border-left: 3px solid #feebaf;
+    padding-left: 20px;
+    margin-bottom: 30px;
+}
+
+.link-image a{
+
+    color: #127878;
+
+}
+
+.link-image h3{
+
+    color: #b5460f;
+    margin: 0;
+    padding: 0;
+
+}
+
+figure {
+    margin: 0;
+    padding: 0;
+}
+
+.Ingredients {
+    margin-top: 50px;
 }
