--- a/M1/styles.css
+++ b/M1/styles.css
@@ -41,6 +41,7 @@ main {
     justify-content: center;
     align-items: center;
     margin-top: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .main-conteiner {
@@ -54,7 +55,7 @@ main {
     color: #333333;
     padding-left: 40px;
     padding-right: 40px;
-    font-size: 43px;
+    font-size: 41px;
 
 }
 
@@ -100,10 +101,38 @@ main {
 }
 
 figure {
+
     margin: 0;
     padding: 0;
 }
 
 .Ingredients {
-    margin-top: 50px;
+
+     margin-top: 50px;
+}
+
+.Ingredients hr {
+    border-color: #44ffff;
+}
+
+.Ingredients h3{
+    margin-top: 30px;
+}
+
+ul{
+
+line-height: 2;
+}
+
+ol {
+    font-size: smaller;
+}
+.p1 {
+    margin-left: 38px;
+}
+
+  
+.Ingredients a {
+    color: #127878;
+
 }
